# poor-man-sqlite

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build.zig
client/: client.c
include/: common.h  file.h  parse.h  server.h
src/: file.c  main.c  parse.c  server.c
